--- a/0x02-CSS_advanced/styles/26-style.css
+++ b/0x02-CSS_advanced/styles/26-style.css
@@ -258,6 +258,18 @@ ul.row {
     color: var(--color-primary);
 }
 
+.section-hero {
+    size: 90rem auto;
+}
+
+.section-title .section-hero {
+    margin-bottom: 5rem;
+}
+
+.section-inner .section-hero {
+    padding: 10rem 40rem 2rem 0;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
