--- a/0x02-CSS_advanced/styles/26-style.css
+++ b/0x02-CSS_advanced/styles/26-style.css
@@ -262,11 +262,11 @@ ul.row {
     size: 90rem auto;
 }
 
-.section-title .section-hero {
+.section-hero .section-title  {
     margin-bottom: 5rem;
 }
 
-.section-inner .section-hero {
+.section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
 }
 
