--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -33,7 +33,7 @@
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: var(--color-primary);
+    --nav-item-link-hover: var(--color-white);
     --section-tagline-margin: 0;
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
@@ -47,12 +47,12 @@
     --header-padding: 4rem 0 0;
     --header-logo-position: relative;
     --header-logo-link-display: inline-block;
-    --header-logo-link-position:absolute;
+    --header-logo-link-position: absolute;
     --header-logo-link-top: -1rem;
     --header-logo-link-left: 0;
 }
 
-*, *:before, *:after {
+  *, *:before, *:after {
     box-sizing: border-box;
 }
 
@@ -61,26 +61,48 @@ html {
     font-size: 62.5%;
 }
 
-body {
+  body {
     color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-base);
+  }
+
+.header {
+    padding: var(--header-padding);
+}
+
+.header-logo {
+    position: var(--header-logo-position);
+}
+
+.header-logo a {
+    display: var(--header-logo-link-display);
+    position: var(--header-logo-link-position);
+    top: var(--header-logo-link-top);
+    left: var(--header-logo-link-left);
+}
+
+[data-section-theme="dark"] {
+    --text-color: var(--color-white);
+    --section-title-color: var(--color-white);
+    background-color: var(--color-black);
+    --button-color: var(--color-white);
 }
 
 .navbar-menu {
     float: right;
 }
 
-.nav {
+  .nav {
     margin: 0;
     padding: 0;
     list-style-type: none;
     text-align: center;
-}
+  }
 
-.nav .nav-item {
+  .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -98,10 +120,25 @@ body {
     color: var(--nav-item-link-hover);
 }
 
+.nav .nav-link::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--color-white);
+    width: 0;
+    height: 0.2rem;
+}
+
+.nav .nav-item:hover .nav-link::before {
+    background-color: var(--color-primary);
+    width: 100%;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
-}
+  }
 
 a:link {
     color: var(--text-color);
@@ -120,7 +157,19 @@ a:active {
     background-color: var(--color-light-grey);
 }
 
-.button {
+.section-hero {
+    background-size: 90rem auto;
+}
+
+  .section-hero .section-title {
+    margin-bottom: 5rem;
+}
+
+.section-hero .section-inner {
+    padding: 10rem 40rem 2rem 0;
+}
+
+  .button {
     display: var(--button-display);
     padding: var(--button-padding);
     border: var(--button-border);
@@ -139,6 +188,10 @@ a:active {
     display: none;
 }
 
+.card-category {
+    color: var(--color-primary);
+}
+
 .section {
     padding: var(--section-padding);
 }
@@ -146,90 +199,6 @@ a:active {
 .section-header {
     text-align: var(--section-header-align);
     padding: var(--section-header-padding);
-}
-
-.section-body {
-    padding: var(--section-body-padding);
-}
-
-.section-footer {
-    padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align);
-}
-
-.section-title {
-    font-family: var(--font-family-title);
-    font-size: var(--font-size-xx-large);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-title-margin);
-    color: var(--section-title-color);
-}
-
-.section-tagline {
-    color: var(--color-primary);
-    font-family: var(--font-family-title);
-    text-transform: var(--section-tagline-transform);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-tagline-margin);
-}
-
-.container {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-ul.row {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.col-1-3 {
-    width: 33.33%;
-  }
-
-.col-1-2 {
-    width: 50%;
-}
-
-[class^="col-"] {
-    float: left;
-    padding: 0.5rem;
-}
-
-.footer-copyright {
-    margin: 0;
-    font-size: var(--font-size-small);
-    color: var(--text-color);
-}
-
-.footer ul {
-    text-align: right;
-}
-.row::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-[data-section-theme='dark']{
-    background-color: var(--color-black);
-    --text-color: var(--color-white);
-    --section-title-color: var(--color-white);
-    --button-color: var(--color-white);
-}
-
-.footer-address {
-    color: var(--text-color);
-}
-
-.social-link {
-    display: block;
-}
-
-.social-link > svg {
-    fill: var(--text-color);
 }
 
 .card-services .card-title {
@@ -242,7 +211,7 @@ ul.row {
     background-color: var(--color-light-grey);
 }
 
-.card-services a:hover {
+  .card-services a:hover {
     color: var(--color-white);
     background-color: var(--color-primary);
     text-decoration: none;
@@ -256,9 +225,9 @@ ul.row {
     border-radius: 50%;
     width: 10rem;
     height: 10rem;
-}
+  }
 
-.card-testimonial .card-quote cite {
+  .card-testimonial .card-quote cite {
     display: block;
     padding-top: 1rem;
     color: var(--color-primary);
@@ -315,48 +284,87 @@ ul.row {
     opacity: 1;
 }
 
-.section-hero {
-    background-size: 90rem auto;
+.section-body {
+    padding: var(--section-body-padding);
 }
 
-.section-hero .section-title {
-    margin-bottom: 5rem;
+.section-footer {
+    padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
 }
 
-.section-hero .section-inner {
-    padding: 10rem 40rem 2rem 0;
+.section-title {
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
 }
 
-.header {
-    padding: var(--header-padding);
+.section-tagline {
+    color: var(--color-primary);
+    font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-tagline-margin);
 }
 
-.header-logo {
-    position: var(--header-logo-position);
-}
-
-.header-logo a {
-    display: var(--header-logo-link-display);
-    position: var(--header-logo-link-position);
-    top: var(--header-logo-link-top);
-    left: var(--header-logo-link-left);
-}
-
-.nav .nav-link::before {
+.row::after {
     content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--color-white);
-    width: 0;
-    height: 0.2rem;
+    display: table;
+    clear: both;
 }
 
-.nav .nav-item:hover .nav-link::before {
-    background-color: var(--color-primary);
-    width: 100%;
+ul.row {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
 
+.col-1-3 {
+    width: 33.33%;
+}
+
+.col-1-2 {
+    width: 50%;
+}
+
+  [class^="col-"] {
+    float: left;
+    padding: 0.5rem;
+}
+
+.container {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer {
+    padding: var(--footer-padding);
+}
+
+.footer-copyright {
+    margin: 0;
+    font-size: var(--font-size-small);
+    color: var(--text-color);
+}
+
+.footer ul {
+    text-align: right;
+}
+
+.footer-address {
+    color: var(--text-color);
+}
+
+.social-link {
+    display: block;
+}
+
+.social-link > svg {
+    fill: var(--text-color);
+}
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
