--- a/0x03-sass_scss/1-color_variables.scss
+++ b/0x03-sass_scss/1-color_variables.scss
@@ -1,4 +1,8 @@
 /* Sass file that assigns the text color #3D3D3D to the HTML tags body and p */
-body, p {
+body {
+    color: #3D3D3D;
+}
+
+p {
     color: #3D3D3D;
 }
