--- a/0x03-sass_scss/1-color_variable.scss
+++ b/0x03-sass_scss/1-color_variable.scss
@@ -1,10 +1,6 @@
 /* Sass file that assigns the text color #3D3D3D to the HTML tags body and p */
 $color-body-and-p: #3D3D3D;
 
-body {
-    color: $color-body-and-p;
-}
-
-p {
+body, p {
     color: $color-body-and-p;
 }
