--- a/0x03-sass_scss/1-color_variable.scss
+++ b/0x03-sass_scss/1-color_variable.scss
@@ -1,6 +1,10 @@
 /* Sass file that assigns the text color #3D3D3D to the HTML tags body and p */
 $color-body-and-p: #3D3D3D;
 
-body, p {
+body {
+    color: $color-body-and-p;
+}
+
+p {
     color: $color-body-and-p;
 }
