--- a/0x03-sass_scss/8-mixin_margins.scss
+++ b/0x03-sass_scss/8-mixin_margins.scss
@@ -5,9 +5,11 @@ Margin left and right at 15px to div tags
 You must use a mixin */
 
 @mixin body {
-    margin: 0 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 @mixin div {
-    margin: 0 15px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
