--- a/0x03-sass_scss/8-mixin_margins.scss
+++ b/0x03-sass_scss/8-mixin_margins.scss
@@ -4,12 +4,15 @@ Margin left and right at 10px to body tags
 Margin left and right at 15px to div tags
 You must use a mixin */
 
+@mixin margin($value-margin) {
+    margin-left: $value-margin;
+    margin-left: $value-margin;
+}
+
 @mixin body {
-    margin-left: 10px;
-    margin-right: 10px;
+    @include margin(10px)
 }
 
 @mixin div {
-    margin-left: 15px;
-    margin-right: 15px;
+    @include margin(15px)
 }
