--- a/0x03-sass_scss/8-mixin_margins.scss
+++ b/0x03-sass_scss/8-mixin_margins.scss
@@ -9,10 +9,10 @@ You must use a mixin */
     margin-left: $value-margin;
 }
 
-@mixin body {
+body {
     @include margin(10px)
 }
 
-@mixin div {
+div {
     @include margin(15px)
 }
