--- a/0x03-sass_scss/9-extend_list.scss
+++ b/0x03-sass_scss/9-extend_list.scss
@@ -1,29 +1,28 @@
-/* Write a Sass file that assigns:
+/* Write a Sass file that assigns :
+Font size 12px,
+Text color #00FF00 to class .success
+Text color #FF0000 to class .warning  */
 
-Font size 12px to all tags of class .info
-Text color #00FF00 to all tags of class .success and extend style of the class .info
-Text color #FF0000 to all tags of class .warning and extend style of the class .info */
-
-%font-size-info {
+%info {
     font-size: 12px;
 }
 
-%color-class-success {
+%succes {
     color: #00ff00;
 }
 
-%color-class-warning {
+%warning {
     color: #ff0000;
 }
 
 .info, .success, .warning {
-    @extend %font-size-info;
+    @extend %info;
 }
 
 .success {
-    @extend %color-class-success;
+    @extend %succes;
 }
 
 .warning {
-    @extend %color-class-warning;
- }
+    @extend %warning;
+}
