--- a/0x03-sass_scss/8-mixin_margins.scss
+++ b/0x03-sass_scss/8-mixin_margins.scss
@@ -3,15 +3,15 @@ Margin left and right at 10px to body tags
 Margin left and right at 15px to div tags
 You must use a mixin */
 
-@mixin margin($value-margin) {
-    margin-left: $value-margin;
-    margin-left: $value-margin;
+@mixin margin($margin) {
+    margin-left: $margin;
+    margin-right: $margin;
 }
 
 body {
-    @include margins(10px);
-  }
+    @include margin(10px);
+}
 
 div {
-    @include margins(15px);
+    @include margin(15px);
 }
