--- a/0x04-flexbox/2-styles.css
+++ b/0x04-flexbox/2-styles.css
@@ -372,10 +372,9 @@ ul.row {
 
 /* Section Latest news
 ============================= */
-.row .section-latest-news {
+.section-latest-news {
     flex-direction: row-reverse;
 }
-
 
   /*** 4. CARD ***/
 
