--- a/0x04-flexbox/6-styles.css
+++ b/0x04-flexbox/6-styles.css
@@ -214,7 +214,7 @@ ul.row {
     letter-spacing: var(--nav-item-letter-spacing);
 }
 
-.nav-item + .nav-item .nav {
+.nav .nav-item + .nav-item {
     margin: var(--nav-item-margin);
 }
 
