--- a/0x04-flexbox/9-styles.css
+++ b/0x04-flexbox/9-styles.css
@@ -376,7 +376,8 @@ ul.row {
     flex-wrap: wrap;
 }
 
-/* Section ABUT US*/
+ /* Section ABOUT US
+ ============================= */
 
 .section-about-us [class*='col-'] {
     align-self: center;
