--- a/0x04-flexbox/11-styles.css
+++ b/0x04-flexbox/11-styles.css
@@ -536,7 +536,7 @@ ul.row {
 }
 
 .hero-article::before {
-    content: none;
+    content: "";
     background-color: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 0;
