--- a/0x04-flexbox/11-styles.css
+++ b/0x04-flexbox/11-styles.css
@@ -526,9 +526,9 @@ ul.row {
     z-index: -1;
 }
 
-/*** ARTICLE PAGE ***/
-/* Section HERO (article)
-    ============================= */
+    /*** ARTICLE PAGE ***/
+    /* Section HERO (article)
+        ============================= */
 
 .hero-article {
     background-size: 150rem 100rem;
@@ -537,7 +537,7 @@ ul.row {
 
 .hero-article::before {
     content: "";
-    background-color: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 0;
     right: 0;
