--- a/0x05-form/01-styles.css
+++ b/0x05-form/01-styles.css
@@ -1,25 +1,24 @@
 /* SUMMARY
-1. GLOBAL
-2. LAYOUT
-3. SECTION
-4. CARD
+    1. GLOBAL
+    2. LAYOUT
+    3. SECTION
+    4. CARD
 */
 
 
 /*** 1. GLOBAL ***/
 
 /* Reset / Normalize
-============================= */
+   ============================= */
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
 /* Variables
-============================= */
+   ============================= */
 
-:root {
-    --color-primary: #D73953;
-    --color-black:  #090909;
+   :root {
+    --color-primary: #d73953;
+    --color-black: #090909;
     --color-white: #ffffff;
     --color-grey: #a0a0a0;
     --color-light-grey: #f3f3f3;
@@ -27,8 +26,9 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
 
     --text-color: var(--color-black);
 
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial,
+      sans-serif;
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
@@ -71,7 +71,7 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
     --nav-item-font-family: var(--font-family-headings);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: .04rem;
+    --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 0 2rem;
     --nav-item-link-hover: var(--color-white);
@@ -88,12 +88,12 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
     --button-hover-background: var(--color-primary);
 
     /** MOTION **/
-    --transition-duration: .3s;
+    --transition-duration: 0.3s;
     --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
 }
 
-/* Base
-    ============================= */
+  /* Base
+            ============================= */
 
 *, *:before, *:after {
     box-sizing: border-box;
@@ -151,8 +151,8 @@ a:active {
     transition-property: color, background-color;
 }
 
-/* Helpers
-    ============================= */
+  /* Helpers
+            ============================= */
 
 .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
@@ -163,10 +163,10 @@ a:active {
     white-space: nowrap;
 }
 
-/*** 2. LAYOUT ***/
+  /*** 2. LAYOUT ***/
 
-/* Layout
-    ============================= */
+  /* Layout
+            ============================= */
 
 .container {
     width: 960px;
@@ -174,8 +174,8 @@ a:active {
     margin-right: auto;
 }
 
-/* Grid
-    ============================= */
+  /* Grid
+            ============================= */
 
 ul.row {
     margin: -1rem;
@@ -187,7 +187,7 @@ ul.row {
     display: flex;
 }
 
-[class*='col-'] {
+[class*="col-"] {
     margin: 1rem;
 }
 
@@ -199,8 +199,8 @@ ul.row {
     width: calc((100% / 2) - 2rem);
 }
 
-/* Navbar
-    ============================= */
+  /* Navbar
+            ============================= */
 
 .nav {
     margin: 0;
@@ -233,7 +233,7 @@ ul.row {
 }
 
 .nav .nav-link::before {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 0;
     left: 0;
@@ -248,8 +248,8 @@ ul.row {
     width: 100%;
 }
 
-/* Header
-    ============================= */
+  /* Header
+            ============================= */
 
 .header {
     padding: var(--header-padding);
@@ -264,8 +264,8 @@ ul.row {
     align-items: center;
 }
 
-/* Footer
-    ============================= */
+  /* Footer
+            ============================= */
 
 .footer {
     --nav-item-font-weight: normal;
@@ -295,10 +295,10 @@ ul.row {
     fill: var(--text-color);
 }
 
-/*** 3. SECTION ***/
+  /*** 3. SECTION ***/
 
-/* Section (all styles)
-    ============================= */
+  /* Section (all styles)
+            ============================= */
 
 .section {
     padding: var(--section-padding);
@@ -334,8 +334,8 @@ ul.row {
     text-align: var(--section-footer-align);
 }
 
-/* Section theming
-    ============================= */
+  /* Section theming
+            ============================= */
 
 [data-section-theme="dark"] {
     --button-color: var(--color-white);
@@ -344,8 +344,8 @@ ul.row {
     background: var(--color-black);
 }
 
-/* Section HERO
-    ============================= */
+  /* Section HERO
+            ============================= */
 
 .section-hero {
     position: relative;
@@ -360,7 +360,7 @@ ul.row {
 }
 
 .section-hero .section-body {
-padding: 10rem 4rem;
+    padding: 10rem 4rem;
 }
 
 .section-hero .section-category {
@@ -379,38 +379,38 @@ padding: 10rem 4rem;
     justify-content: center;
     min-height: 50vh;
 }
-/* Section Latest news
-    ============================= */
+  /* Section Latest news
+            ============================= */
 
 .section-latest-news .row {
     flex-direction: row-reverse;
 }
 
-/* Section SERVICES
-    ============================= */
+  /* Section SERVICES
+            ============================= */
 
 .section-services .row {
     flex-wrap: wrap;
 }
 
-/* Section ABOUT US
-    ============================= */
+  /* Section ABOUT US
+            ============================= */
 
-.section-about-us [class*='col-'] {
+.section-about-us [class*="col-"] {
     align-self: center;
 }
 
-/*** 4. CARD ***/
+  /*** 4. CARD ***/
 
-/* Card (all styles)
-    ============================= */
+  /* Card (all styles)
+            ============================= */
 
 .card-category {
     color: var(--color-primary);
 }
 
-/* Card WORK
-    ============================= */
+  /* Card WORK
+            ============================= */
 
 .card-work .card-outer {
     position: relative;
@@ -467,15 +467,15 @@ padding: 10rem 4rem;
     left: 0;
     right: 0;
     bottom: 0;
-    content: '';
+    content: "";
 }
 
 .card-work:hover .card-title {
     opacity: 1;
 }
 
-/* Card SERVICES
-    ============================= */
+  /* Card SERVICES
+            ============================= */
 
 .card-services .card-title {
     margin: 0;
@@ -495,8 +495,8 @@ padding: 10rem 4rem;
     transition-property: color, background-color;
 }
 
-/* Card TESTIMONIAL
-    ============================= */
+  /* Card TESTIMONIAL
+            ============================= */
 
 .card-testimonial {
     text-align: center;
@@ -519,7 +519,7 @@ padding: 10rem 4rem;
 }
 
 .card-testimonial .card-quote::before {
-    content: '\201C';
+    content: "\201C";
     position: absolute;
     top: -4.5rem;
     left: -1rem;
@@ -528,10 +528,10 @@ padding: 10rem 4rem;
     z-index: -1;
 }
 
-/*** ARTICLE PAGE ***/
+  /*** ARTICLE PAGE ***/
 
-/* Section HERO (article)
-    ============================= */
+  /* Section HERO (article)
+            ============================= */
 
 .hero-article {
     background-size: 150rem 100rem;
@@ -539,7 +539,7 @@ padding: 10rem 4rem;
 }
 
 .hero-article::before {
-    content: '';
+    content: "";
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 0;
@@ -565,8 +565,8 @@ padding: 10rem 4rem;
     padding: 5rem 0;
 }
 
-/* Post
-    ============================= */
+  /* Post
+            ============================= */
 
 .post {
     display: flex;
@@ -600,8 +600,8 @@ padding: 10rem 4rem;
     text-align: center;
 }
 
-/* Post Meta
-    ============================= */
+  /* Post Meta
+            ============================= */
 
 .post-meta-list {
     flex-direction: column;
@@ -614,21 +614,21 @@ padding: 10rem 4rem;
     text-transform: uppercase;
     letter-spacing: normal;
     display: block;
-}
+  }
 
-.post-meta-list [class*='post-meta'] {
+.post-meta-list [class*="post-meta"] {
     margin-bottom: 1rem;
     padding-bottom: 1rem;
     border-bottom: 0.2rem solid var(--color-light-grey);
 }
 
-.post-meta-list [class*='post-meta']:last-child {
+.post-meta-list [class*="post-meta"]:last-child {
     border: none;
     margin-bottom: 3rem;
 }
 
-/* Tag list
-    ============================= */
+  /* Tag list
+            ============================= */
 
 .tag-list {
     padding: 0;
@@ -656,14 +656,15 @@ padding: 10rem 4rem;
     margin: 10rem 0 0 auto;
     padding-left: 7rem;
 }
-.section-title .post-comments {
+
+.post-comments .section-title {
     font-variant: small-caps;
 }
 
-/* Basic form
-    ============================= */
+    /* Basic form
+        ============================= */
 
-.form {
+form {
     display: flex;
     flex-direction: column;
     padding: 1rem 0;
